Push report to server

--- a/extension/_locales/en/messages.json
+++ b/extension/_locales/en/messages.json
@@ -8,6 +8,9 @@
   "reportMessage": {
     "message": "Reported successfully!"
   },
+  "reportMessageFail": {
+    "message": "Report failed! Please try again"
+  },
   "toggleExtension": {
     "message": "Toggle FB Fisher Report"
   }
